<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/new_transaction"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:fillViewport="true"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/banner_NewTransaction"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/header_background"
            android:gravity="bottom"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/financeflow"
                android:textColor="@android:color/white"
                android:textSize="32sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_transaction"
                android:textColor="@color/graylight_text"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/amount"
                android:textColorHint="@color/black_text"
                app:boxBackgroundColor="@color/white_box"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusBottomEnd="16dp"
                app:boxCornerRadiusBottomStart="16dp"
                app:boxCornerRadiusTopEnd="16dp"
                app:boxCornerRadiusTopStart="16dp"
                app:boxStrokeColor="@color/blue_strokeColor"
                app:cursorColor="@color/black_cursor"
                app:hintTextColor="@color/blue_strokeColor">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:textColor="@color/black_text"
                    android:textColorHint="@color/black_text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/description"
                android:textColorHint="@color/black_text"
                app:boxBackgroundColor="@color/white_box"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusBottomEnd="16dp"
                app:boxCornerRadiusBottomStart="16dp"
                app:boxCornerRadiusTopEnd="16dp"
                app:boxCornerRadiusTopStart="16dp"
                app:boxStrokeColor="@color/blue_strokeColor"
                app:cursorColor="@color/black_cursor"
                app:hintTextColor="@color/blue_strokeColor">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black_text"
                    android:textColorHint="@color/black_text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/date"
                android:textColorHint="@color/black_text"
                app:boxBackgroundColor="@color/white_box"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusBottomEnd="16dp"
                app:boxCornerRadiusBottomStart="16dp"
                app:boxCornerRadiusTopEnd="16dp"
                app:boxCornerRadiusTopStart="16dp"
                app:boxStrokeColor="@color/blue_strokeColor"
                app:cursorColor="@color/black_cursor"
                app:endIconDrawable="@drawable/ic_calendar"
                app:endIconMode="custom"
                app:hintTextColor="@color/blue_strokeColor">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="false"
                    android:inputType="date"
                    android:textColor="@color/black_text"
                    android:textColorHint="@color/black_text"
                    tools:ignore="KeyboardInaccessibleWidget" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:cardBackgroundColor="@color/white_box"
                app:cardCornerRadius="16dp"
                app:cardElevation="2dp"
                app:strokeColor="@color/black_strokeColor"
                app:strokeWidth="1dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/type"
                        android:textColor="#808080"
                        android:textSize="12sp" />

                    <com.google.android.material.button.MaterialButtonToggleGroup
                        android:id="@+id/toggleType"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        app:selectionRequired="true"
                        app:singleSelection="true">

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btnIncome"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/income"
                            android:textColor="@color/green_typoText"
                            app:backgroundTint="@color/green_typeIncomeSelected"
                            app:cornerRadius="10dp"
                            app:strokeColor="@color/green_typeStroke"
                            app:strokeWidth="2dp" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btnExpense"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/expense"
                            android:textColor="@color/gray_typoText"
                            app:backgroundTint="@color/gray_typoUnselected"
                            app:cornerRadius="10dp"
                            app:strokeColor="@color/gray_typoStrokeUnselected"
                            app:strokeWidth="1dp" />
                    </com.google.android.material.button.MaterialButtonToggleGroup>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <Button
                android:id="@+id/btnSave"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="22dp"
                android:backgroundTint="@color/blue_button"
                android:text="@string/save_transaction"
                android:textColor="@color/white_text"
                app:cornerRadius="12dp" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>