<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="16dp"
    android:layout_marginVertical="8dp"
    app:cardBackgroundColor="@color/white_box"
    app:cardCornerRadius="16dp"
    app:cardElevation="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <!-- Description -->
            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/salary"
                android:textColor="@color/black_text"
                android:textSize="18sp" />

            <!-- Date -->
            <TextView
                android:id="@+id/tvDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_01_06_2025"
                android:textColor="@color/graylight_text"
                android:textSize="13sp" />
        </LinearLayout>


        <!-- Amount -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:hint="Debit"
            android:textColor="@color/red_credito"
            android:textColorHint="@color/red_credito"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/r_3000"
            android:textColor="@color/green_text"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

</com.google.android.material.card.MaterialCardView>